<resources>
    <string name="app_name" translatable="false">SmartHome</string>
    <string name="dashboard_appbar">Dashboard</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="red" translatable="false">R</string>
    <string name="green" translatable="false">G</string>
    <string name="blue" translatable="false">B</string>
    <string name="lights_details_appbar">LED lights</string>
    <string name="hvac_details_appbar">HVAC</string>
    <string name="error_title">Error</string>
    <string name="connection_error_message">Unable to connect with smart home</string>
    <string name="quit">Quit</string>
    <string name="placeholder">Placeholder</string>
    <string name="light_sensor_name">Light</string>
    <string name="temperature_sensor_name">Temperature</string>
    <string name="smoke_sensor_name">Smoke sensor</string>
    <string name="blinds_sensor_name">Window blinds</string>
    <string name="window_sensor_name">Window</string>
    <string name="RFID_sensor_name">RFID sensor</string>
    <string name="HVAC_sensor_name">HVAC</string>
    <string name="temperature_details" translatable="false">%1$s°C</string>
    <string name="window_blinds_details" translatable="false">%1$s%%</string>
    <string name="smoke_detected">Smoke detected</string>
    <string name="hvac_room_heating_temperature">Heating temperature: </string>
    <string name="hvac_room_cooling_temperature">Cooling temperature: </string>
    <string name="transformer_separator" translatable="false">, </string>
    <string name="hvac_room_hysteresis">Hysteresis: </string>
    <string name="hvac_status_heating">Heating</string>
    <string name="hvac_status_cooling">Cooling</string>
    <string name="sensor_add_success">Sensor has been successfully moved</string>
    <string name="sensor_add_failure_position_occupied">Sensor already exists in this place</string>
    <string name="sensor_add_failure_no_connection">Sensor could not be added</string>
    <string name="sensor_delete_failure_no_connection">Sensor could not be deleted</string>
    <string name="sensor_removed">Sensor has been successfully deleted</string>
    <string name="blind_details_appbar">Blind</string>
    <string name="hvac_details_temp_label">Set temp:</string>
    <string name="hvac_datails_hint" translatable="false">…</string>
    <string name="hvac_details_connecting_error">Unable to load HVAC System</string>
    <string name="hvac_hysteresis_label">Hysteresis</string>
    <string name="hvac_temperature_label">Temperature</string>
    <string name="home_appbar">Home</string>
    <string name="apply_toast">Successfully applied</string>
    <string name="update_value_toast_error">Something went wrong</string>
    <string name="graph_1_h" translatable="false">1 h</string>
    <string name="graph_3_h" translatable="false">3 h</string>
    <string name="graph_6_h" translatable="false">6 h</string>
    <string name="graph_12_h" translatable="false">12 h</string>
    <string name="graph_24_h" translatable="false">24 h</string>
    <string name="channel_name" translatable="false">name</string>
    <string name="channel_description" translatable="false">description</string>
    <string name="filter_view_http_splash" translatable="false">filter_view_http_splash</string>
    <string name="network_connection_error">No internet connection</string>
    <string name="api_connection_error">Couldn\'t connect to SmartHome</string>
    <string name="house_image" translatable="false">House image</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="login" translatable="false">Login</string>
    <string name="dahboard_fragment_class_name" translatable="false">DashboardFragment</string>
    <string name="home_fragment_class_name" translatable="false">HomeFragment</string>
    <string name="splash_screen_text"><u>Your intelligent home</u></string>
    <string name="foreground_notification_title">Your SmartHome is active</string>
    <string name="Version">Version %s</string>
    <string name="delete_sensors">Delete all sensors</string>
    <string name="dark_mode_setting">Enable dark mode</string>
    <string name="developer_settings">Developer settings</string>
    <string name="notifications_setting">Show notifications</string>
    <string name="settings_toolbar">Settings</string>
    <string name="third_party_acknowledgments">Third Party Acknowledgments</string>
    <string name="about_us_title">About Us</string>
    <string name="legal_notice">Legal notice</string>
    <string name="weak_password">Password is not strong enough</string>
    <string name="invalid_email">Email address is incorrect</string>
    <string name="account_does_not_exists">Account doesn\'t exists</string>
    <string name="account_already_exists">Account already exists. Please choose\nanother email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="different_password">Passwords are not the same</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="google_sign_in_success">Google sign in finished successfully</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">or</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create account</string>
    <string name="sign_out">Sign out</string>
    <string name="opened_window">Opened</string>
    <string name="closed_window">Closed</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="sign_in_success">Sign in finished successfully</string>
    <string name="sign_up_success">Sign up finished successfully</string>
    <string name="available_input" translatable="false">
        QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm1234567890`-=[]\u005C;\u0027,./!@#$%^\u0026*()_+{}|:"?~\u003C\u003E
    </string>
</resources>