<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    android:padding="@dimen/standard_break"
    tools:context=".feature.temperature.view.TemperatureDetailsFragment">

    <com.intive.patronage.smarthome.feature.temperature.view.GraphView
        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/none"
        android:layout_marginBottom="@dimen/standard_break"
        android:id="@+id/graphView" />

    <LinearLayout
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:enabled="false"
            android:textColor="@color/time_stamp_button_text"
            android:background="@drawable/time_stamp_button_background"
            android:layout_weight="1"
            android:id="@+id/button1h"
            android:text="@string/graph_1_h"
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"/>

        <Button
            android:enabled="true"
            android:textColor="@color/time_stamp_button_text"
            android:background="@drawable/time_stamp_button_background"
            android:layout_weight="1"
            android:id="@+id/button3h"
            android:text="@string/graph_3_h"
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"/>

        <Button
            android:enabled="true"
            android:textColor="@color/time_stamp_button_text"
            android:background="@drawable/time_stamp_button_background"
            android:layout_weight="1"
            android:id="@+id/button6h"
            android:text="@string/graph_6_h"
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"/>

        <Button
            android:enabled="true"
            android:textColor="@color/time_stamp_button_text"
            android:background="@drawable/time_stamp_button_background"
            android:layout_weight="1"
            android:id="@+id/button12h"
            android:text="@string/graph_12_h"
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"/>

        <Button
            android:enabled="true"
            android:textColor="@color/time_stamp_button_text"
            android:background="@drawable/time_stamp_button_background"
            android:layout_weight="1"
            android:id="@+id/button24h"
            android:text="@string/graph_24_h"
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>