<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.intive.patronage.smarthome.feature.login.viewmodel.RegisterViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context="com.intive.patronage.smarthome.feature.login.view.RegisterActivity">

        <ImageView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/applicationLogo"
            android:layout_width="@dimen/splash_screen_logo_size"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo"/>

        <LinearLayout
            android:id="@+id/registerCard"
            android:gravity="center"
            android:orientation="vertical"
            android:elevation="@dimen/elevation"
            android:background="@drawable/rounded_login_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="@dimen/splash_screen_logo_size"
            android:layout_height="@dimen/login_card_height">

            <com.google.android.material.textfield.TextInputLayout
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_email_length"
                app:inputError="@{viewModel.newEmailError}"
                android:id="@+id/newAccountEmailLayout"
                app:hintEnabled="false"
                app:errorEnabled="true"
                android:hint="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:singleLine="true"
                    android:maxLength="@integer/max_email_length"
                    app:onNewEmailInput="@{viewModel}"
                    android:id="@+id/newAccountEmail"
                    android:textSize="@dimen/login_text_size"
                    android:textColor="@color/loginScreenMainColor"
                    android:hint="@string/email"
                    android:padding="@dimen/login_text_input_padding"
                    android:background="@drawable/rounded_with_stroke"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_width="@dimen/login_text_input_width"
                    android:layout_height="@dimen/login_text_input_height"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_password_length"
                app:inputError="@{viewModel.newPasswordError}"
                android:id="@+id/newAccountPasswordLayout"
                android:layout_marginTop="@dimen/standard_break"
                app:hintEnabled="false"
                app:errorEnabled="true"
                android:hint="@string/app_name"
                app:passwordToggleEnabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:singleLine="true"
                    android:maxLength="@integer/max_password_length"
                    app:onNewPasswordInput="@{viewModel}"
                    android:id="@+id/newAccountPassword"
                    android:textSize="@dimen/login_text_size"
                    android:textColor="@color/loginScreenMainColor"
                    android:hint="@string/password"
                    android:padding="@dimen/login_text_input_padding"
                    android:background="@drawable/rounded_with_stroke"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_width="@dimen/login_text_input_width"
                    android:layout_height="@dimen/login_text_input_height"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_password_length"
                app:inputError="@{viewModel.confirmPasswordError}"
                android:id="@+id/confirmPasswordLayout"
                android:layout_marginTop="@dimen/standard_break"
                app:hintEnabled="false"
                app:errorEnabled="true"
                android:hint="@string/app_name"
                app:passwordToggleEnabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:singleLine="true"
                    android:maxLength="@integer/max_password_length"
                    app:onConfirmPasswordInput="@{viewModel}"
                    android:id="@+id/confirmPassword"
                    android:textSize="@dimen/login_text_size"
                    android:textColor="@color/loginScreenMainColor"
                    android:hint="@string/confirm_password"
                    android:padding="@dimen/login_text_input_padding"
                    android:background="@drawable/rounded_with_stroke"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_width="@dimen/login_text_input_width"
                    android:layout_height="@dimen/login_text_input_height"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                app:actionEnabled="@{viewModel.isCreateAccountEnabled()}"
                android:onClick="@{() -> viewModel.createAccount()}"
                android:layout_marginTop="@dimen/standard_break"
                android:textSize="@dimen/login_text_size"
                android:textAllCaps="false"
                android:elevation="@dimen/elevation"
                android:background="@drawable/login_button"
                android:textColor="@color/colorPrimary"
                android:text="@string/create_account"
                android:id="@+id/createAccount"
                android:layout_width="@dimen/login_text_input_width"
                android:layout_height="@dimen/login_text_input_height"/>

        </LinearLayout>

        <LinearLayout
            android:onClick="@{() -> viewModel.signIn()}"
            android:id="@+id/registerInfo"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/login_text_size"
                android:textColor="@color/loginScreenMainColor"
                android:text="@string/already_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginBottom="@dimen/login_screen_items_margin"
                android:textSize="@dimen/login_big_text_size"
                android:textColor="@color/loginScreenMainColor"
                android:text="@string/sign_in"
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>